adding form to add campaigns

--- a/src/main/resources/static/add_campaign.html
+++ b/src/main/resources/static/add_campaign.html
@@ -7,17 +7,17 @@
 <body>
 <h3>current balance</h3>
 <br>
-<form action="add_campaign.html" method="post">
-  Campaign name:<input type="text" name="Campaign name"/>
+<form action="" method="post">
+  Campaign name:<input type="text" name="name"/>
   <br>
-  Keywords:<input type="text" name="Keywords"/>
+  Keywords:<input type="text" name="keywords"/>
   <br>
-  Bid amount:<input type="number" min="100"/>
+  Bid amount:<input type="number" name="bid" min="100"/>
   <br>
-  Campaign fund:<input type="number"/>
+  Campaign fund:<input type="number" name="fund"/>
   <br>
   Status:
-  <select name="town">
+  <select name="status">
     <option selected="selected" value="on">on</option>
     <option value="off">off</option>
   </select>
